# fast-mcp-claude

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  README.md  mcp-server.json  pyproject.toml  start-launcher.sh  start-session.sh  start.sh
.claude/: settings.example.json
.claude/commands/: control.md  fleet-inbox.md  worker.md
.claude/hooks/: permission_relay.sh
archive/handovers/: HANDOVER-2026-07-20-backlog-campaign-2.md  HANDOVER-2026-07-20-backlog-campaign-3.md  HANDOVER-2026-07-20-backlog-campaign-4.md  HANDOVER-2026-07-20-backlog-campaign-5.md  HANDOVER-2026-07-20-backlog-campaign.md  HANDOVER-2026-07-21-backlog-campaign-10.md  HANDOVER-2026-07-21-backlog-campaign-2.md  HANDOVER-2026-07-21-backlog-campaign-3.md  HANDOVER-2026-07-21-backlog-campaign-4.md  HANDOVER-2026-07-21-backlog-campaign-5.md  HANDOVER-2026-07-21-backlog-campaign-6.md  HANDOVER-2026-07-21-backlog-campaign-7.md  HANDOVER-2026-07-21-backlog-campaign-8.md  HANDOVER-2026-07-21-backlog-campaign-9.md  HANDOVER-2026-07-21-backlog-campaign.md
backlog/: config.yml
backlog/docs/: doc-1 - Backlog-campaign-tracker.md
backlog/tasks/: fmc-1 - Package-the-herdr-tmux-shim-as-installable-tooling-for-interactive-Claude-Code-sessions.md  fmc-10 - Fix-server.py-__main__.py-MCP-auth-silently-fails-open-when-MCP_API_KEY-is-unset-and-the-startup-log-misreports-it-as-enabled.md  fmc-11 - Fix-file-bridge-sandbox-TOCTOU-symlink-race-between-validate_workspace_path-and-use-in-files.py.md  fmc-12 - Fix-store.py-hub-drain-races-double-claimed-teams-session-relay-sends-and-unbounded-Notifier-growth-via-adversarial-identities-channels.md  fmc-13 - Fix-channel.py-incomplete-two-part-arming-gate-and-race-prone-claimed-message-state.md  fmc-14 - Fix-hook.py-authenticated-permission-relay-client-passes-an-unsupported-headers-kwarg-silently-disabling-controller-approval.md  fmc-15 - Fix-launcher.py-duplicate-instance-ownership-is-unenforced-and-in-flight-replies-are-lost-across-reconnect-and-shutdown.md  (+9 more)
herdr-tmux-shim/: README.md  claude-in-herdr  tmux
sandbox-runner/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
sandbox-runner/apparmor/: README.md  eca-agent
sandbox-runner/egress-proxy/: Dockerfile  README.md  allowlist.conf  net-down.sh  net-up.sh  tinyproxy.conf
sandbox-runner/seccomp/: README.md  eca-seccomp.json  generate.py
sandbox-runner/smoke/: smoke.sh
sandbox-runner/src/sandbox_runner/: __init__.py  __main__.py  gitcreds.py  limits.py  replay.py  result.py  runner.py
sandbox-runner/tests/: test_gitcreds.py  test_limits.py  test_replay.py  test_result.py  test_runner.py
spawner/: .env.bak.pre-arm  .gitignore  README.md  pyproject.toml
spawner/src/spawner/: __init__.py  __main__.py  app.py  bus_contract.py  config.py  consumer.py  launcher.py  presence.py  processor.py  relay.py  store.py
spawner/tests/: test_consumer.py  test_integration_nats.py  test_launcher.py  test_presence.py  test_processor.py  test_relay.py  test_store.py
src/fast_mcp_claude/: __init__.py  __main__.py  auth.py  channel.py  (+9 more)
tests/: conftest.py  test_auth.py  test_channel.py  test_files.py  test_hook.py  test_launcher.py  test_messaging.py  test_permissions.py  test_presence.py  test_pubsub.py  test_send_prompt_admin_trust.py  test_server.py  test_session.py  test_session_hook.py  test_session_relay.py  test_statusline_hook.py  test_storage.py  test_teams_outbox.py  test_validation.py
worker-supervisor/: .env.example  README.md  pyproject.toml  start.sh
worker-supervisor/deploy/: README.md  gen-evolv-ultra-mcp-config.py  reconfigure-evolv-ultra-lanes.sh
worker-supervisor/src/worker_supervisor/: __init__.py  __main__.py  capsule.py  cli.py  config.py  engine.py  envbuild.py  events.py  gate.py  presence.py  registry.py  server.py
worker-supervisor/tests/: conftest.py  test_engine.py  test_envbuild.py  test_gate.py  test_registry.py  test_server.py
(+16 files in other folders)
