[project]
name = "fast-mcp-claude"
version = "0.1.0"
description = "FastMCP server for peer-to-peer remote control between Claude Code sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "aiosqlite>=0.19.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
fast-mcp-claude = "fast_mcp_claude.__main__:main"
fast-mcp-claude-hook = "fast_mcp_claude.hook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fast_mcp_claude"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
