[project]
name = "spawner"
version = "0.1.0"
description = "Per-peer spawner v0 (ECA-65): the only consumer of dispatch.<member>.<machine>. Durable NATS pull consumer + terminal-state CAS + hardened container launch (eca/agent-sandbox:dev) + result/event publish + boot reconciliation. Sibling of worker-supervisor/ and sandbox-runner/; the NATS client on the operator's peer that replaces the launcher."
requires-python = ">=3.12"
dependencies = [
    "nats-py>=2.7",
    "aiosqlite>=0.20",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
spawner = "spawner.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spawner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
