[project]
name = "worker-supervisor"
version = "0.1.0"
description = "SDK worker supervisor - local autonomous worker fleets (ADR-0028 / ECA-60, design of record in evolv-coder-agent docs)"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk==0.2.91",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "fastmcp>=3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
workers = "worker_supervisor.cli:main"
worker-supervisor = "worker_supervisor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker_supervisor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
